--- a/metaFinal/src/view/PartieClient/Reservation_VoyageClient.fxml
+++ b/metaFinal/src/view/PartieClient/Reservation_VoyageClient.fxml
@@ -3,39 +3,38 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="693.0" prefWidth="1169.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="658.0" prefWidth="937.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="view.PartieClient.Reservation_VoyageClientController">
    <children>
-      <DatePicker layoutX="912.0" layoutY="290.0" />
-      <DatePicker layoutX="585.0" layoutY="290.0" />
-      <AnchorPane layoutX="-12.0" layoutY="-14.0" prefHeight="722.0" prefWidth="512.0" style="-fx-background-color: #073258;">
+      <AnchorPane layoutX="468.0" prefHeight="681.0" prefWidth="718.0" style="-fx-background-color: #073258;">
          <children>
-            <Label layoutX="103.0" layoutY="431.0" prefHeight="50.0" prefWidth="395.0" text="Reserver votre voyage" textFill="#fcfcfc">
+            <DatePicker fx:id="Date_depart" layoutX="229.0" layoutY="248.0" promptText="Date_depart" />
+            <Button fx:id="Reserver" contentDisplay="CENTER" defaultButton="true" layoutX="229.0" layoutY="419.0" mnemonicParsing="false" onAction="#ReserverVoyage" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: #FFFFFF;" text="Réserver" textAlignment="CENTER" textFill="#0b0022">
                <font>
-                  <Font size="34.0" />
+                  <Font name="Akhbar MT" size="18.0" />
                </font>
-            </Label>
-            <ImageView fitHeight="307.0" fitWidth="330.0" layoutX="91.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true">
+            </Button>
+            <ImageView fitHeight="223.0" fitWidth="279.0" layoutX="449.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../login_signup/272896551_284823900301309_6294383665325954873_n.png" />
                </image>
             </ImageView>
+            <DatePicker fx:id="Date_arrivee" layoutX="229.0" layoutY="332.0" promptText="Date_arrivee" />
          </children>
       </AnchorPane>
-      <TextField fx:id="Email" layoutX="555.0" layoutY="153.0" prefHeight="28.0" prefWidth="277.0" promptText="Email" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
-      <TextField fx:id="Email1" layoutX="555.0" layoutY="411.0" prefHeight="28.0" prefWidth="277.0" promptText="Email" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
-      <TextField fx:id="Email2" layoutX="912.0" layoutY="137.0" prefHeight="28.0" prefWidth="277.0" promptText="Email" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
-      <TextField fx:id="Email3" layoutX="912.0" layoutY="411.0" prefHeight="28.0" prefWidth="277.0" promptText="Email" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
-      <Button fx:id="submitButton" contentDisplay="CENTER" defaultButton="true" layoutX="778.0" layoutY="563.0" mnemonicParsing="false" onAction="#signup" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: #073258;" text="Sign Up" textAlignment="CENTER" textFill="WHITE">
+      <ImageView fitHeight="537.0" fitWidth="521.0" layoutX="44.0" layoutY="158.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/famous-buildings-round-the-world-travel-wallpaper.jpg" />
+         </image>
+      </ImageView>
+      <Label layoutX="139.0" layoutY="181.0" prefHeight="50.0" prefWidth="395.0" text="Reserver votre voyage" textAlignment="CENTER" textFill="#270665" textOverrun="CENTER_ELLIPSIS">
          <font>
-            <Font name="Akhbar MT" size="18.0" />
+            <Font name="Book Antiqua Italic" size="34.0" />
          </font>
-      </Button>
+      </Label>
    </children>
 </AnchorPane>
