--- a/metaFinal/src/view/hotel/ReservationHotel.fxml
+++ b/metaFinal/src/view/hotel/ReservationHotel.fxml
@@ -1,22 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="813.0" prefWidth="1039.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="698.0" prefWidth="1039.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.hotel.ReservationHotelController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#cad0d7" height="820.0" stroke="BLACK" strokeType="INSIDE" width="211.0" />
-      <Button layoutY="145.0" mnemonicParsing="false" prefHeight="86.0" prefWidth="211.0" text="Gestion Hotel" />
-      <Button layoutY="237.0" mnemonicParsing="false" prefHeight="86.0" prefWidth="211.0" text="Gestion Reservation" />
-      <Button layoutY="333.0" mnemonicParsing="false" prefHeight="86.0" prefWidth="211.0" text="Chambre" />
-      <ImageView fitHeight="112.0" fitWidth="131.0" layoutX="26.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../image/logo_meta.png" />
-         </image>
-      </ImageView>
+      <TableView fx:id="tab_reservation" layoutX="28.0" layoutY="155.0" onMouseClicked="#tablehandleButtonAction" prefHeight="422.0" prefWidth="773.0">
+        <columns>
+          <TableColumn fx:id="Idrh" prefWidth="111.0" text="Id reservation" />
+          <TableColumn fx:id="Nb_nuitees" prefWidth="117.0" text="nombre nuités" />
+            <TableColumn fx:id="Nb_personnes" prefWidth="139.0" text="Nombre personne" />
+            <TableColumn fx:id="Prix" prefWidth="75.0" text="Prix" />
+            <TableColumn fx:id="Idu" prefWidth="75.0" text="Id user" />
+            <TableColumn fx:id="idc" prefWidth="75.0" text="Id chambre" />
+            <TableColumn fx:id="Date_depart" prefWidth="90.0" text="Date depart" />
+            <TableColumn fx:id="Date_arrivee" prefWidth="90.0" text="Date arrive" />
+        </columns>
+      </TableView>
+      <Button fx:id="btn_cofirmation" layoutX="823.0" layoutY="464.0" mnemonicParsing="false" onAction="#ConfirmerReservation" stylesheets="@../../values/style.css" text="Confirmer Reservation ">
+         <styleClass>
+            <String fx:value="search-box" />
+            <String fx:value="search-button" />
+            <String fx:value="search-box" />
+         </styleClass></Button>
+      <Button layoutX="337.0" layoutY="613.0" mnemonicParsing="false" onAction="#Retour" prefHeight="31.0" prefWidth="143.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Retour" />
+      <Button layoutX="823.0" layoutY="510.0" mnemonicParsing="false" onAction="#SupprimerReservation" prefHeight="31.0" prefWidth="172.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Supprimer Reservation" />
+      <VBox alignment="CENTER" layoutX="372.0" layoutY="14.0" prefHeight="85.0" prefWidth="476.0" styleClass="chosen-fruit-card" stylesheets="@../../values/style.css" AnchorPane.rightAnchor="300.0">
+         <children>
+            <HBox prefHeight="66.0" prefWidth="448.0">
+               <children>
+                  <ImageView fitHeight="101.0" fitWidth="87.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/logo_meta.png" />
+                     </image>
+                  </ImageView>
+                  <Label alignment="CENTER" text="MetaTrip  Hotel " textFill="#fcf3f3">
+                     <font>
+                        <Font name="Cambria Bold" size="36.0" />
+                     </font>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </HBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
